<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attendingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events_attending" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="194dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hostingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events_hosting" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="186dp" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:text="@string/host_an_event" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Your Events"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>